fixed copy and spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ li {
 }
 
 .footer-img {
-  position: absolute;
+  position: fixed;
   transform: translateX(-50%);
   left: 50%;
   bottom: 0;
